[gd_scene load_steps=2 format=3 uid="uid://bgwu6ytk5xf02"]

[ext_resource type="Script" path="res://scripts/player_hand.gd" id="1_2beue"]

[node name="PlayerHand" type="Node2D"]
script = ExtResource("1_2beue")

[node name="PlayerHandStart" type="Marker2D" parent="."]
position = Vector2(608, 416)

[node name="HandGUI" type="CanvasLayer" parent="."]

[node name="Hit" type="Button" parent="HandGUI"]
offset_left = 576.0
offset_top = 552.0
offset_right = 607.0
offset_bottom = 583.0
text = "Hit"

[node name="Stand" type="Button" parent="HandGUI"]
offset_left = 576.0
offset_top = 592.0
offset_right = 629.0
offset_bottom = 623.0
text = "Stand"

[connection signal="pressed" from="HandGUI/Hit" to="." method="_on_hit_pressed"]
[connection signal="pressed" from="HandGUI/Stand" to="." method="_on_stand_pressed"]
